chore(fixed): add mapped team result
