# src/main/java/com/prog3_td2/prog3/controllers/Mapper/PlayMapper.java
@@ -1,4 +1,4 @@
-package com.prog3_td2.prog3.Mapper;
+package com.prog3_td2.prog3.controllers.Mapper;
 
 import com.prog3_td2.prog3.controllers.formatter.hourFormatter;
 import com.prog3_td2.prog3.controllers.response.PlayResponse;
@@ -6,12 +6,11 @@ import com.prog3_td2.prog3.model.PlayAgainst;
 
 public class PlayMapper {
     public static PlayResponse toRest(PlayAgainst playAgainst){
-        String PLayingtime = hourFormatter.customformat(playAgainst.getDateTime());
+        String PlayingTime = hourFormatter.customformat(playAgainst.getDateTime());
         return PlayResponse.builder()
                 .id(playAgainst.getId())
-                .datetime(PLayingtime)
+                .datetime(PlayingTime)
                 .team1(playAgainst.getTeam1().getName())
-                .stadium(playAgainst.getStadium())
                 .team2(playAgainst.getTeam2().getName())
                 .build();
     }
