# src/main/java/com/prog3_td2/prog3/controllers/response/TeamResponse.java
@@ -1,18 +1,18 @@
 package com.prog3_td2.prog3.controllers.response;
 
-import com.prog3_td2.prog3.model.TeamEntity;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 
+import java.util.List;
 @Builder
 @AllArgsConstructor
 @Data
 @NoArgsConstructor
-public class PlayResponse {
+public class TeamResponse {
     private Long id;
-    private  String datetime;
-    private String team1;
-    private String team2;
+    private String name;
+    private List<String> sponsors;
+    private List<String> Player;
 }
